# Creating-a-triangle

./: CMakeLists.txt  README.md
FirstOpenGL/: FirstOpenGL.vcxproj  glad.c  main.cpp
include/: shader.fs  shader.h  shader.vs
include/glad/: glad.h
src/: frag_shader.frag  glad.c  main.cpp  shader.h  vert_shader.vert
